--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,9 @@ jobs:
     runs-on: windows-2019
     continue-on-error: true
     steps:
-      - name: Show $PATH
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Test docker build
         run: |
           cd R-3.6.2
           docker build .
